2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincExBox.cs:
	* IZincNumBox.cs:
	* ZincAsBoxBase.cs:
	* ZincExBoxBase.cs:
	* ZincNumBoxBase.cs:
	* IZincNumNumBox.cs:
	* ZincExIdBoxBase.cs:
	* ZincNumNumBoxBase.cs:
	* ZincAsExTiaBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincTiesBox.cs:
	* ZincTieBoxBase.cs:
	* IZincTieTiesBox.cs:
	* ZincIdTieBoxBase.cs:
	* ZincTieTiesBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincExIdBoxBase.cs:
	* ZincIdTieBoxBase.cs:
	* ZincAsExTiaBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdTieBoxBase.cs:
	* ZincAsExTiaBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincTiaBox.cs:
	* IZincIdTieBox.cs:
	* ZincIdTieBoxBase.cs:
	* ZincAsExTiaBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincIdBox.cs:
	* IZincTieBox.cs:
	* ZincExBoxBase.cs:
	* ZincAsBoxBase.cs:
	* ZincAsExTiaBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincExBox.cs:
	* IZincIdBox.cs:
	* IZincAsBox.cs:
	* IZincTiaBox.cs:
	* IZincTieBox.cs:
	* IZincExIdBox.cs:
	* ZincExBoxBase.cs:
	* ZincIdBoxBase.cs:
	* IZincIdentBox.cs:
	* ZincTieBoxBase.cs:
	* IZincAsExTiaBox.cs:
	* ZincExIdBoxBase.cs:
	* ZincIdentBoxBase.cs:
	* IZincExpressionBox.cs:
	* ZincAsExTiaBoxBase.cs:
	* IZincAnnotationsBox.cs:
	* ZincExpressionBoxBase.cs:
	* IZincIdentExpressionBox.cs:
	* IZincTypeInstAndIdentBox.cs:
	* ZincIdentExpressionBoxBase.cs:
	* IZincTypeInstExpressionBox.cs:
	* ZincTypeInstExpressionBoxBase.cs:
	* IZincTypeInstExprAndIdentAnnotationsExpressionBox.cs:
	* ZincTypeInstExprAndIdentAnnotationsExpressionBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincIdentBox.cs:
	* ZincIdentBoxBase.cs:
	* IZincExpressionBox.cs:
	* IZincAnnotationsBox.cs:
	* ZincExpressionBoxBase.cs:
	* IZincIdentExpressionBox.cs:
	* IZincTypeInstAndIdentBox.cs:
	* ZincIdentExpressionBoxBase.cs: