@@ -106,5 +106,6 @@ namespace ZincOxide.MiniZinc {
         }
 
     }
+
 }
 
