@@ -1,3 +1,7 @@
+2013-09-21  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* ZincNumNumBoxBase.cs: 
+
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* IZincExBox.cs:
